Use modern java features where we can, optimise imports.